vlib/v/checker/tests/inout/in_array_mismatch_type.vv
fn main() {
	if 1 in ['1', '2'] {
		println('ok')
	}
}